Fix modal dialog z-index problem, fix modal dialog focus when opening / closing

--- a/source/assets/stylesheets/modules/_modal.scss
+++ b/source/assets/stylesheets/modules/_modal.scss
@@ -10,7 +10,9 @@
     right: 0;
     bottom: 0;
     padding-top: 10em;
+    z-index: 2;
   }
+
   .modal-content {
     background-color: $background-color;
     padding: 2em;
